kubernetes/main/platform/observability/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app grafana
  namespace: observability
spec:
  hostnames:
    - grafana.local.dcunha.io
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          namespace: observability
          kind: Service
          port: 80
